Adds power mosfets, removes unnecessary 7805 TODO: * develop revers voltage protection * develop fuse * develop antistatic protection

--- a/README
+++ b/README
@@ -11,3 +11,11 @@ STL - Sequential Tail Lights
 3 секция - через 200мс от первой.
 
 Дальше все это горит пока не выключат.
+
+
+Элементная база
+---------------
+
+С таймером и счетчиком все и так понятно.
+В качестве силовых ключей можно использовать:
+AUIRFR5305 - Vdss -55V, Id -31A, Rds - 0.065Ohm, D-Pak
