--- a/README
+++ b/README
@@ -4,18 +4,48 @@ STL - Sequential Tail Lights
 Идея
 ----
 
-Берем таймер 555, счетчик cd4017 и этим всем включаем секции заднего фонаря шевроле каприз следующим
-образом:
-1 секция - при включении питания (нажали стоп, включили поворотник/аварийку)
-2 секция - через 100мс от первой
-3 секция - через 200мс от первой.
+Плата, котора по включению питания будет с задержкой зажигать от 1 до 7 лампочек. т.е. Подали питание, ждем задержку, включаем 1 канал, ждем, включаем 2 канал и тд. После того как доходим до последнего включенного канала - остамся гореть. Если был включен поворотник - реле поворотов отключит питание и включит вновь: пойдем опять шагать и включать лампы. Если нажат тормоз - просто остаемся гореть всеми подключенными каналами.
 
-Дальше все это горит пока не выключат.
+Фичи:
+	- настраиваемое количество каналов
+	- автоматическая настройка под интервал реле указателей поворота
 
 
-Элементная база
----------------
+Железо
+------
+STM8S003 - как мозг. ULN2003 - драйвер ключей. 
 
-С таймером и счетчиком все и так понятно.
-В качестве силовых ключей можно использовать:
-AUIRFR5305 - Vdss -55V, Id -31A, Rds - 0.065Ohm, D-Pak
+
+
+Вход платы - питание и земля.
+
+Выход
+* питание (насквозь с входного разъема)
+* земля (насквозь с входного разъема)
+* 7 упарявляемых выходов.
+
+
+Описание платы
+--------------
+
+Конфиругация
+------------
+ PD3 - вход LEARN. идея в том, что в режиме LEARN плата замеряет свой аптайм, сохраняет его в энергонезависимой памяти
+       и использует далее для расчета длительности включения каналов.
+ PD4, PD5, PD6 - задают количество подключенных каналов.
+
+Выходы:
+
+ PA3 - диод-мигалка
+
+Выход МК   Нога МК   Ключ     Канал	Пин
+ PC7        17	      Q2        0	3
+ PC6        16        Q4        1	4
+ PC5        15        Q5        2	5
+ PC4        14        Q1        3	6
+ PC3        13	      Q3        4	7
+ PB4        12        Q6	5	8
+ PB5        11        Q7	6	9
+ 
+
+
